---------------------------------------------------------------------------------------------------
Version: 1.1.35
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.34
Date: 2025-01-25
  Changes:
    - Fixed the size of the sun being slightly increased whilst PlanetsLib is installed.
  Locale:
    - Chinese update.
---------------------------------------------------------------------------------------------------
Version: 1.1.33
Date: 2025-01-24
  Locale:
    - Japanese added.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ????
  Changes:
    - New APIs: restrict_surface_conditions, relax_surface_conditions and restrict_to_planet.
---------------------------------------------------------------------------------------------------
Version: 1.1.31
Date: 2025-01-22
  Changes:
    - (Missing.)
---------------------------------------------------------------------------------------------------
Version: 1.1.30
Date: 2025-01-22
  Bugfixes:
    - Bugfix new API.
---------------------------------------------------------------------------------------------------
Version: 1.1.29
Date: 2025-01-22
  Changes:
    - Properly export new API.
---------------------------------------------------------------------------------------------------
Version: 1.1.28
Date: 2025-01-22
  Modding:
    - Simpler API for cargo drops technologies.
---------------------------------------------------------------------------------------------------
Version: 1.1.27
Date: 2025-01-19
  Changes:
    - Updated the orbit image generation script.
  Locale:
    - Description update.
---------------------------------------------------------------------------------------------------
Version: 1.1.26
Date: 2025-01-15
  Changes:
    - Readded PlanetsLib.borrow_music.